Prevent navbar from cutting off content
- If you log in or perform other operations on the site, the
  navbar should now not overlap any content.

--- a/relevate_web_app/static/scss/base/_variables.scss
+++ b/relevate_web_app/static/scss/base/_variables.scss
@@ -25,6 +25,14 @@ $rv-font-weight-light: 300;
 
 /**
 ----------------
+  Navbar
+----------------
+**/
+
+$rv-navbar-height: 5rem;
+
+/**
+----------------
   Shadows
 ----------------
 **/
