--- a/relevate_web_app/static/scss/components/_home-header.scss
+++ b/relevate_web_app/static/scss/components/_home-header.scss
@@ -1,7 +1,7 @@
 @import "../base/variables";
 
 .rv-home-header {
-  padding: 8em 0 6em;
+  padding: 3em 0 3em;
   overflow: hidden;
   display: flex;
   justify-content: center;
