--- a/relevate_web_app/static/scss/components/_navbar.scss
+++ b/relevate_web_app/static/scss/components/_navbar.scss
@@ -2,9 +2,14 @@
 
 .rv-navbar {
   position: fixed;
+  top: 0;
   width: 100%;
   background: rgba($rv-color-white, 0.8);
   z-index: 999;
+}
+
+.rv-navbar-placeholder {
+  height: $rv-navbar-height;
 }
 
 .rv-navbar_logo {
